<resources>
    <string name="app_name">Account</string>
    <string name="app_name_Chinese">账目通</string>
    <string name="edit_account">请输入账号</string>
    <string name="edit_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="toast_login_fail_password">登陆失败，账号密码错误</string>
    <string name="toast_login_fail_internet">登录失败，请检查网络设置</string>
    <string name="toast_login_fail_code">登陆失败，请联系管理员</string>
    <string name="toast_login_success">登陆成功</string>
    <string name="logout">注销</string>
    <string name="addRecord">添加记录</string>
    <string name="commodityList">商品总表</string>
    <string name="recordHistory">添加历史</string>
    <string name="recordsList">查看总表</string>
    <string name="chooseByRule">筛选</string>
    <string name="add">添加</string>
    <string name="item_name">商品名称：</string>
    <string name="item_stock">剩余库存(kg)：</string>
    <string name="item_old_stock">期初库存(kg):</string>
    <string name="item_price">商品单价（每kg）:</string>
    <string name="wait_commit">待提交：</string>
    <string name="commit">提交</string>
    <string name="sell_list">销售记录</string>
    <string name="chooseTitle">筛选</string>
    <string name="chooseName">商品名称：</string>
    <string name="chooseUser">用户名称：</string>
    <string name="chooseTime">筛选时间：</string>
    <string name="confirm">确认</string>
    <string name="sellRecords">销售记录</string>

</resources>
