<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_name"/>
        <EditText
            android:id="@+id/name_edit"
            android:layout_width="@dimen/frag_updateCom_firstLine"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginRight="@dimen/activity_login_editPadding"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_price"/>
        <EditText
            android:id="@+id/price_edit"
            android:layout_width="@dimen/frag_updateCom_firstLine"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="number"
            android:digits="0123456789."
            android:layout_marginRight="@dimen/activity_login_editPadding"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical">
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_old_stock"/>
        <EditText
            android:id="@+id/oldstock_edit"
            android:layout_width="@dimen/frag_updateCom_firstLine"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="number"
            android:digits="0123456789."
            android:layout_marginRight="@dimen/activity_login_editPadding"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_stock"/>
        <EditText
            android:id="@+id/stock_edit"
            android:layout_width="@dimen/frag_updateCom_firstLine"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="number"
            android:digits="0123456789."
            android:layout_marginRight="@dimen/activity_login_editPadding"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_horizontal_margin">
        <Button
        android:id="@+id/addButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        style="@style/login_button_style"
        android:textColor="@color/colorLoginText"
        android:textSize="@dimen/activity_login_textSize"
            android:layout_marginRight="50dp"
        android:text="@string/addRecord"/>
        <Button
            android:id="@+id/commitButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            style="@style/login_button_style"
            android:textColor="@color/colorLoginText"
            android:textSize="@dimen/activity_login_textSize"
            android:text="@string/commit"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/wait_commit"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/waitCommitList"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>