<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.xwysun.account.LoginActivity">

       <ImageView
           android:id="@+id/Icon"
           android:layout_width="@dimen/icon_size"
           android:layout_height="@dimen/icon_size"
           android:layout_gravity="center"
           android:src="@mipmap/icon"
           android:contentDescription="@string/app_name"
           android:scaleType="centerCrop"
           />
       <EditText
           android:id="@+id/UserAccount"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@drawable/shape_edit_login"
           android:layout_marginTop="@dimen/activity_vertical_margin"
           android:paddingTop="@dimen/activity_login_editPadding"
           android:paddingBottom="@dimen/activity_login_editPadding"
           android:paddingLeft="@dimen/activity_vertical_margin"
           android:drawablePadding="@dimen/activity_vertical_margin"
           android:drawableLeft="@drawable/edit_account"
           android:drawableStart="@drawable/edit_account"
           android:singleLine="true"
           android:textColorHint="@color/colorEditHint"
           android:hint="@string/edit_account"
           android:inputType="number"/>
        <EditText
            android:id="@+id/UserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_login_editPadding"
            android:paddingBottom="@dimen/activity_login_editPadding"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:drawablePadding="@dimen/activity_vertical_margin"
            android:background="@drawable/shape_edit_login"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:drawableLeft="@drawable/edit_password"
            android:drawableStart="@drawable/edit_password"
            android:singleLine="true"
            android:textColorHint="@color/colorEditHint"
            android:hint="@string/edit_password"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/LoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/login_button_style"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorLoginText"
            android:textSize="@dimen/activity_login_textSize"
            android:text="@string/login"/>
</LinearLayout>
