<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="@color/toolBarTitle">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="@dimen/activity_login_titleSize"
        android:text="@string/chooseTitle"/>
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="@dimen/activity_horizontal_margin"-->
        <!--android:orientation="horizontal"-->
        <!--android:gravity="center_horizontal">-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginRight="@dimen/activity_horizontal_margin"-->
            <!--android:textSize="@dimen/activity_login_textSize"-->
            <!--android:text="@string/chooseName"/>-->
        <!--<Spinner-->
            <!--android:id="@+id/chooseName"-->
            <!--android:layout_width="@dimen/spinner_width"-->
            <!--android:layout_height="@dimen/spinner_width"/>-->
    <!--</LinearLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/activity_login_textSize"
            android:text="@string/chooseTime"/>
        <Spinner
            android:id="@+id/chooseTime"
            android:layout_width="@dimen/spinner_width"
            android:layout_height="@dimen/spinner_width"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/activity_login_textSize"
            android:text="@string/chooseUser"/>
        <Spinner
            android:id="@+id/chooseUser"
            android:layout_width="@dimen/spinner_width"
            android:layout_height="@dimen/spinner_width"/>
    </LinearLayout>
    <Button
        android:id="@+id/confirm"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        style="@style/login_button_style"
        android:textColor="@color/colorLoginText"
        android:textSize="@dimen/activity_login_textSize"
        android:text="@string/confirm"/>
</LinearLayout>
