<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorViewBackground"
    tools:context=".HomeActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_records_top"
        android:background="@color/colorBlueLight"
        >
        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_records_marginLeft"
            android:layout_marginTop="@dimen/activity_records_marginTop"
            android:contentDescription="@string/app_name"
            android:layout_gravity="start"
            android:scaleType="centerCrop"
            android:visibility="invisible"
            android:src="@drawable/btn_back"/>
        <TextView
            android:id="@+id/Logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_marginRight="@dimen/activity_records_marginLeft"
            android:layout_marginTop="@dimen/activity_records_marginTop"
            android:textSize="@dimen/activity_logout_textSize"
            android:textColor="@color/colorLoginText"
            android:text="@string/logout"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:src="@drawable/logo_mini"/>
            <TextView
                android:id="@+id/UserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorLoginText"
                android:textSize="@dimen/activity_logout_textSize"
                android:text="河西分店"
                />
        </LinearLayout>
    </FrameLayout>
    <!--<TextView-->
        <!--android:id="@+id/addRecord"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:drawableLeft="@drawable/add_record"-->
        <!--android:drawableStart="@drawable/add_record"/>-->
    <TextView
        android:id="@+id/add_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLoginText"
        android:textSize="@dimen/activity_logout_textSize"
        android:layout_marginTop="@dimen/activity_home_mid"
        android:drawableLeft="@drawable/btn_add"
        android:drawableStart="@drawable/btn_add"
        android:drawableRight="@drawable/btn_next"
        android:drawableEnd="@drawable/btn_next"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:text="@string/addRecord"
        android:gravity="center|left"/>
    <TextView
        android:id="@+id/record_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLoginText"
        android:textSize="@dimen/activity_logout_textSize"
        android:layout_marginTop="@dimen/activity_home_line"
        android:drawableLeft="@drawable/btn_history"
        android:drawableStart="@drawable/btn_history"
        android:drawableRight="@drawable/btn_next"
        android:drawableEnd="@drawable/btn_next"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:text="@string/recordHistory"
        android:gravity="center|left"/>
    <TextView
        android:id="@+id/records_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLoginText"
        android:textSize="@dimen/activity_logout_textSize"
        android:layout_marginTop="@dimen/activity_home_line"
        android:drawableLeft="@drawable/btn_list"
        android:drawableStart="@drawable/btn_list"
        android:drawableRight="@drawable/btn_next"
        android:drawableEnd="@drawable/btn_next"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:text="@string/recordsList"
        android:gravity="center|left"/>
</LinearLayout>
